Source Capability + DominionWand radial menu for mode select