@@ -7,6 +7,7 @@ import com.hollingsworth.arsnouveau.api.util.BlockUtil;
 import com.hollingsworth.arsnouveau.api.util.SourceUtil;
 import com.hollingsworth.arsnouveau.client.particle.ParticleUtil;
 import com.hollingsworth.arsnouveau.common.block.ITickable;
+import com.hollingsworth.arsnouveau.common.capability.SourceStorage;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.HolderLookup;
 import net.minecraft.nbt.CompoundTag;
@@ -14,6 +15,7 @@ import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.entity.BlockEntityType;
 import net.minecraft.world.level.block.state.BlockState;
 import net.neoforged.bus.api.Event;
+import org.jetbrains.annotations.NotNull;
 import software.bernie.geckolib.animatable.GeoAnimatable;
 import software.bernie.geckolib.animatable.GeoBlockEntity;
 import software.bernie.geckolib.animatable.instance.AnimatableInstanceCache;
@@ -32,6 +34,19 @@ public class SourcelinkTile extends AbstractSourceMachine implements GeoBlockEnt
 
     public SourcelinkTile(BlockEntityType<?> sourceLinkTile, BlockPos pos, BlockState state) {
         super(sourceLinkTile, pos, state);
+    }
+
+    @Override
+    public @NotNull SourceStorage getSourceStorage() {
+        if (sourceStorage == null) {
+            sourceStorage = new SourceStorage(getMaxSource(), getTransferRate(), getTransferRate(), getSource()) {
+                @Override
+                public boolean canReceive() {
+                    return false;
+                }
+            };
+        }
+        return sourceStorage;
     }
 
     @Override
@@ -56,8 +71,8 @@ public class SourcelinkTile extends AbstractSourceMachine implements GeoBlockEnt
         if (level.getGameTime() % 100 == 0 && getSource() > 0) {
             List<ISpecialSourceProvider> providers = SourceUtil.canGiveSource(worldPosition, level, 5);
             if(!providers.isEmpty()){
-                transferSource(this, providers.get(0).getSource());
-                ParticleUtil.spawnFollowProjectile(level, this.worldPosition, providers.get(0).getCurrentPos(), this.getColor());
+                transferSource(this, providers.getFirst().getSource());
+                ParticleUtil.spawnFollowProjectile(level, this.worldPosition, providers.getFirst().getCurrentPos(), this.getColor());
             }
         }
     }
@@ -101,14 +116,14 @@ public class SourcelinkTile extends AbstractSourceMachine implements GeoBlockEnt
     }
 
     @Override
-    protected void loadAdditional(CompoundTag tag, HolderLookup.Provider pRegistries) {
+    protected void loadAdditional(@NotNull CompoundTag tag, HolderLookup.@NotNull Provider pRegistries) {
         super.loadAdditional(tag, pRegistries);
         progress = tag.getInt("progress");
         isDisabled = tag.getBoolean("disabled");
     }
 
     @Override
-    public void saveAdditional(CompoundTag tag, HolderLookup.Provider pRegistries) {
+    public void saveAdditional(@NotNull CompoundTag tag, HolderLookup.@NotNull Provider pRegistries) {
         super.saveAdditional(tag, pRegistries);
         tag.putInt("progress", progress);
         tag.putBoolean("disabled", isDisabled);
